--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -1,39 +1,55 @@
 @font-face {
-    font-family: "Futura";
-    src: url("../fonts/FuturaCyrillic-Demi.woff2") format("woff2");
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Futura";
-    src: url("../fonts/FuturaCyrillicMedium.woff2") format("woff2");
+    font-family: "Inter";
+    src: url("../fonts/Inter18pt-Medium.woff2") format("woff2");
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: "Futura";
-    src: url("../fonts/FuturaCyrillicBook.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Futura";
-    src: url("../fonts/FuturaCyrillic-Bold.woff2") format("woff2");
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "Futura";
-    src: url("../fonts/FuturaCyrillicLight.woff2") format("woff2");
+    font-family: "Inter";
+    src: url("../fonts/Inter18pt-Light.woff2") format("woff2");
     font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url("../fonts/Inter18pt-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url("../fonts/Inter18pt-SemiBold.woff2") format("woff2");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Medium.woff2") format("woff2");
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
