--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -9,38 +9,14 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    background-color: var(--color-secondary);
+    background-color: var(--color-white-alt);
 
     font-family: var(--font-primary);
     font-size: var(--font-size-md);
     color: var(--color-primary);
-    background: url("../images/bg.jpg");
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    overflow-x: hidden;
-
-    &::before {
-        content: "";
-        inset: 0;
-        width: 100%;
-        height: 100%;
-        max-width: 100vw;
-        position: fixed;
-        z-index: -1;
-        background-color: #000;
-        opacity: 0.7;
-        transition-duration: var(--transition-duration-longer);
-    }
 }
 
 main {
-    overflow-x: hidden;
-    width: 100%;
-    max-width: 100vw;
-
     flex-grow: 1;
 }
 
@@ -56,33 +32,24 @@ h5,
 .h5,
 h6,
 .h6 {
-    color: var(--color-accent);
+    font-weight: 500;
+    color: var(--color-black-alt);
+    line-height: 1;
 }
 
 h1,
 .h1 {
     font-size: var(--font-size-xxl);
-    font-weight: 600;
-    line-height: 1.17;
 }
 
 h2,
 .h2 {
     font-size: var(--font-size-xl);
-    font-weight: 600;
-    line-height: 1.22;
 }
 
 h3,
 .h3 {
     font-size: var(--font-size-l);
-    font-weight: 300;
-}
-
-h4,
-.h4 {
-    font-size: var(--font-size-md);
-    font-weight: 600;
 }
 
 a,
@@ -109,42 +76,6 @@ a {
 
 :focus-visible {
     @include focus-visible;
-}
-
-.animation {
-    will-change: transform;
-    transition-duration: var(--transition-duration-longer);
-    opacity: 0;
-}
-
-.animation-to-top {
-    transform: translateY(50%);
-}
-
-.animation-to-bottom {
-    transform: translateY(-50%);
-}
-
-.animation-to-right {
-    transform: translateX(-50%);
-}
-
-.animation-to-left {
-    transform: translateX(50%);
-}
-
-.animation-scale {
-    transform: translate(0) scale(0);
-}
-
-.animation-opacity {
-    transform: translate(0) scale(1);
-    opacity: 0;
-}
-
-.animation-end {
-    transform: translate(0) scale(1);
-    opacity: 1;
 }
 
 *.loading {
