--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -14,6 +14,7 @@
     --color-gray-alt: #505154;
 
     --color-theme: #254cba;
+    --color-theme-alt: #2e59cf;
 
     // fonts
     --font-primary: "Inter", sans-serif;
