--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -13,7 +13,7 @@ body {
 
     font-family: var(--font-primary);
     font-size: var(--font-size-md);
-    color: var(--color-primary);
+    color: var(--color-black-alt);
 }
 
 main {
