--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -18,6 +18,7 @@
 
     // fonts
     --font-primary: "Inter", sans-serif;
+    --font-secondary: "Roboto", sans-serif;
     --font-size-xxl: #{fluid(46, 28)};
     --font-size-xl: #{fluid(42, 28)};
     --font-size-l: #{fluid(24, 16)};
