--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -12,6 +12,7 @@
 
     --color-gray: #6d6d6d;
     --color-gray-alt: #505154;
+    --color-gray-alt-2: #b1b1b1;
 
     --color-theme: #254cba;
     --color-theme-alt: #2e59cf;
