--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -8,6 +8,7 @@
 
     --color-black: #000;
     --color-black-alt: #1e1e1e;
+    --color-black-alt-o32: rgb(30, 30, 30, 32%);
     --color-black-alt-2: #0b0b0b;
 
     --color-gray: #6d6d6d;
@@ -37,6 +38,8 @@
     // borders
     --radius-l: 8px;
     --radius-md: 4px;
+
+    --border-gray: 1px solid rgba(109, 109, 109, 0.16);
 
     // transitions
     --transition-duration: 0.2s;
