--- a/blocks/catalog-card/catalog-card.scss
+++ b/blocks/catalog-card/catalog-card.scss
@@ -3,6 +3,7 @@
 .catalog-card {
   display: flex;
   flex-direction: column;
+  row-gap: 1rem;
   height: 100%;
 
   &__image {
@@ -12,11 +13,12 @@
   }
 
   &__title {
-    margin-block: fluid(24, 16) 16px;
+    padding-top: fluid(8, 0);
     flex-grow: 1;
   }
 
   &__more-link {
+    text-transform: uppercase;
     font-size: 12px;
     color: var(--color-gray);
   }
